fixed line-spacing

--- a/style.css
+++ b/style.css
@@ -622,7 +622,7 @@ h3 {
     font-weight: 200;
     font-size: 35px;
     text-align: center;
-    line-height: 5.5rem; }
+    line-height: 3.5rem; }
 
 
 
